--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Three js Game engine</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+
+    <div id="canvas"></div>
     
     <script type="module" src="src/index.js"></script>
 </body>
